@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.53)
 AC_INIT([texi2html], [1.77], [users@texi2html.cvshome.org])
-AM_INIT_AUTOMAKE([gnu 1.7 dist-bzip2])
+AM_INIT_AUTOMAKE([gnu 1.7 dist-bzip2 dist-zip])
 
 dnl Disable Autoconf, Automake, and some other maintainer tools without the
 dnl --enable-maintainer-mode argument.
