@@ -34,7 +34,7 @@ conditions for modified versions, except that this
 permission notice may be stated in a translation approved
 by the Free Software Foundation.
 -->
-<!-- Created on February, 3 2005 by texi2html 1.76 -->
+<!-- Created on February, 4 2005 by texi2html 1.77 -->
 <!--
 Written by: Lionel Cons <Lionel.Cons@cern.ch> (original author)
             Karl Berry  <karl@freefriends.org>
@@ -45,13 +45,13 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 
 -->
 <head>
-<title>Texi2HTML - Texinfo to HTML v1.76: Texi2HTML</title>
+<title>Texi2HTML - Texinfo to HTML v1.77: Texi2HTML</title>
 
-<meta name="description" content="Texi2HTML - Texinfo to HTML v1.76: Texi2HTML">
-<meta name="keywords" content="Texi2HTML - Texinfo to HTML v1.76: Texi2HTML">
+<meta name="description" content="Texi2HTML - Texinfo to HTML v1.77: Texi2HTML">
+<meta name="keywords" content="Texi2HTML - Texinfo to HTML v1.77: Texi2HTML">
 <meta name="resource-type" content="document">
 <meta name="distribution" content="global">
-<meta name="Generator" content="texi2html 1.76">
+<meta name="Generator" content="texi2html 1.77">
 <meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
 <style type="text/css">
 <!--
@@ -136,7 +136,7 @@ by the Free Software Foundation.
 <a name="SEC_Top"></a>
 
 
-<p>This manual, last updated 1 February 2005, describes version 1.76
+<p>This manual, last updated 4 February 2005, describes version 1.77
 of the <code>texi2html</code> Perl script which converts
 <a href="http://www.texinfo.org">Texinfo</a> into <a href="http://w3c.org">HTML</a>.
 </p>
@@ -5961,7 +5961,7 @@ directory.
 </tr></table>
 <h1>About This Document</h1>
 <p>
-  This document was generated by <em>Derek R. Price</em> on <em>February, 3 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.76</em></a>.
+  This document was generated by <em>Derek R. Price</em> on <em>February, 4 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.77</em></a>.
 </p>
 <p>
   The buttons in the navigation panels have the following meaning:
@@ -6063,7 +6063,7 @@ directory.
 <hr size="1">
 <p>
  <font size="-1">
-  This document was generated by <em>Derek R. Price</em> on <em>February, 3 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.76</em></a>.
+  This document was generated by <em>Derek R. Price</em> on <em>February, 4 2005</em> using <a href="http://texi2html.cvshome.org/"><em>texi2html 1.77</em></a>.
  </font>
  <br>
 
